--- a/05-components/02-carousel.html
+++ b/05-components/02-carousel.html
@@ -44,118 +44,124 @@
         line-height: 1;
       }
 
-      .accordion {
-        width: 700px;
+      .carousel {
+        background-color: #087f5b;
+        width: 800px;
         margin: 100px auto;
+        padding: 32px 48px 32px 86px;
+        /* padding-left: 86px;
+        padding-right: 48px; */
+        border-radius: 8px;
+        position: relative;
+
         display: flex;
-        flex-direction: column;
-        gap: 24px;
-      }
-
-      .item {
-        box-shadow: 0 0 32px rgba(0, 0, 0, 0.1);
-        padding: 24px;
-
-        display: grid;
-        grid-template-columns: auto 1fr auto;
-        column-gap: 24px;
-        row-gap: 32px;
         align-items: center;
+        gap: 86px;
       }
 
-      .number,
-      .text {
-        font-size: 24px;
+      img {
+        height: 200px;
+        border-radius: 8px;
+        transform: scale(1.5);
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+      }
+
+      .testimonial-text {
+        font-size: 18px;
         font-weight: 500;
-        /* color: #087f5b; */
+        line-height: 1.5;
+        margin-bottom: 32px;
+        color: #e6fcf5;
+      }
+      .testimonial-author {
+        font-size: 14px;
+        margin-bottom: 4px;
+        color: #c3fae8;
+      }
+      .testimonial-job {
+        font-size: 12px;
+        color: c3fae8;
+        color: #c3fae8;
       }
 
-      .number {
-        color: #ced4da;
+      /* CONTROLS */
+      .btn {
+        background-color: #fff;
+        border: none;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        position: absolute;
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
 
-      .text {
+      .btn--left {
+        /* In relation to PARENT ELEMENT */
+        left: 0;
+        top: 50%;
+
+        /* In relation to ELEMENT ITSELF */
+        transform: translate(-50%, -50%);
       }
-      .icon {
-        width: 24px;
+
+      .btn--right {
+        right: 0;
+        top: 50%;
+        transform: translate(50%, -50%);
+      }
+
+      .btn-icon {
         height: 24px;
+        width: 24px;
         stroke: #087f5b;
       }
-      .hidden-box {
-        grid-column: 2;
-        display: none;
-      }
 
-      .hidden-box p {
-        line-height: 1.6;
-        margin-bottom: 24px;
-      }
+      .dots {
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%, 32px);
 
-      .hidden-box ul {
-        color: #868e96;
-        margin-left: 17px;
         display: flex;
-        flex-direction: column;
         gap: 12px;
       }
 
-      /* OPEN STATE */
-      .open {
-        border-top: 4px solid #087f5b;
+      .dot {
+        height: 12px;
+        width: 12px;
+        background-color: #fff;
+        border: 2px solid #087f5b;
+        border-radius: 50%;
+        cursor: pointer;
       }
 
-      .open .hidden-box {
-        display: block;
-      }
-
-      .open .number,
-      .open .text {
-        color: #087f5b;
+      .dot--fill {
+        background-color: #087f5b;
       }
     </style>
     <title>Document</title>
   </head>
   <body>
-    <div class="accordion">
-      <div class="item">
-        <p class="number">01</p>
-        <p class="text">Where are these chairs assembled?</p>
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke="currentColor"
-          stroke-width="2"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M19 9l-7 7-7-7"
-          />
-        </svg>
-        <div class="hidden-box">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed culpa
-            itaque, provident voluptates incidunt facere deleniti odio voluptate
-            alias quae iusto nobis laudantium pariatur ipsa nesciunt blanditiis
-            nulla error. Quos.
-          </p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          </ul>
-        </div>
-      </div>
+    <div class="carousel">
+      <img src="maria.jpg" alt="Maria's picture" />
+      <blockquote class="testimonial">
+        <p class="testimonial-text">
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minima
+          beatae aspernatur quos sint accusamus. Hic beatae."
+        </p>
+        <p class="testimonial-author">Maria de Almeida</p>
+        <p class="testimonial-job">Senior Product Manager at Panasonic</p>
+      </blockquote>
 
-      <div class="item open">
-        <p class="number">02</p>
-        <p class="text">How long do I have to return my chair?</p>
+      <button class="btn btn--left">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="icon"
+          class="btn-icon"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -164,31 +170,14 @@
           <path
             stroke-linecap="round"
             stroke-linejoin="round"
-            d="M19 9l-7 7-7-7"
+            d="M15 19l-7-7 7-7"
           />
         </svg>
-        <div class="hidden-box">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed culpa
-            itaque, provident voluptates incidunt facere deleniti odio voluptate
-            alias quae iusto nobis laudantium pariatur ipsa nesciunt blanditiis
-            nulla error. Quos.
-          </p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="item">
-        <p class="number">03</p>
-        <p class="text">Do you ship to countries outside the EU?</p>
+      </button>
+      <button class="btn btn--right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="icon"
+          class="btn-icon"
           fill="none"
           viewBox="0 0 24 24"
           stroke="currentColor"
@@ -197,23 +186,15 @@
           <path
             stroke-linecap="round"
             stroke-linejoin="round"
-            d="M19 9l-7 7-7-7"
+            d="M9 5l7 7-7 7"
           />
         </svg>
-        <div class="hidden-box">
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed culpa
-            itaque, provident voluptates incidunt facere deleniti odio voluptate
-            alias quae iusto nobis laudantium pariatur ipsa nesciunt blanditiis
-            nulla error. Quos.
-          </p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit.</li>
-          </ul>
-        </div>
+      </button>
+      <div class="dots">
+        <button class="dot dot--fill">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
       </div>
     </div>
   </body>
