--- a/05-components/04-pagination.html
+++ b/05-components/04-pagination.html
@@ -43,12 +43,10 @@
         color: #343a40;
         line-height: 1;
       }
-
       .container {
         width: 800px;
         height: 400px;
-        background-color: #e6fcf5;
-        /* margin: 100px auto; */
+
         position: absolute;
         top: 50%;
         left: 50%;
@@ -73,6 +71,7 @@
         border: 1px solid #087f5b;
         border-radius: 50%;
         stroke: #087f5b;
+        cursor: pointer;
       }
 
       .btn:hover {
@@ -90,12 +89,13 @@
         border-radius: 50%;
 
         display: flex;
-        text-align: center;
         align-items: center;
         justify-content: center;
       }
 
-      .pages:hover {
+      .pages:hover,
+      .pages:active,
+      .pages.page-link--current {
         background-color: #087f5b;
         color: #fff;
       }
@@ -123,7 +123,7 @@
         </svg>
         <a href="#" class="pages">1</a>
         <a href="#" class="pages">2</a>
-        <a href="#" class="pages">3</a>
+        <a href="#" class="pages page-link--current">3</a>
         <a href="#" class="pages">4</a>
         <a href="#" class="pages">5</a>
         <a href="#" class="pages">6</a>
