--- a/06-omnifood/index.html
+++ b/06-omnifood/index.html
@@ -166,40 +166,154 @@
       </section>
 
       <section class="section-meals">
-        <div class="container">
+        <div class="container center-text">
           <span class="subheading">Meals</span>
           <h2 class="heading-secondary">
             Omnifood AI chooses from 5,000+ recipes
           </h2>
         </div>
 
-        <div class="container grid grid--3-cols">
+        <div class="container grid grid--3-cols margin-bottom-md">
           <div class="meal">
             <img
               src="img/meals/meal-1.jpg"
               alt="Japanese gyozas"
               class="meal-img"
             />
-            <span class="tag">Vegetarian</span>
-            <p class="meal-title">Japanese Gyozas</p>
-            <ul class="meal-attributes">
-              <li class="meal-attribute">
-                <ion-icon name="flame-outline"></ion-icon>
-                <span>650 calories</span>
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag--vegetarian">Vegetarian</span>
+              </div>
+              <p class="meal-title">Japanese Gyozas</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                  <span><strong>650</strong> calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon>
+                  <span>NutriScore &reg; <strong>74</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.9</strong> rating (537)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="meal">
+            <img
+              src="img/meals/meal-2.jpg"
+              alt="Avocado Salad"
+              class="meal-img"
+            />
+            <div class="meal-content">
+              <div class="meal-tags">
+                <span class="tag tag--vegan">Vegan</span>
+                <span class="tag tag--paleo">Paleo</span>
+              </div>
+              <p class="meal-title">Avocado Salad</p>
+              <ul class="meal-attributes">
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                  <span><strong>400</strong> calories</span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon
+                    class="meal-icon"
+                    name="restaurant-outline"
+                  ></ion-icon>
+                  <span>NutriScore &reg; <strong>92</strong></span>
+                </li>
+                <li class="meal-attribute">
+                  <ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                  <span><strong>4.8</strong> rating (441)</span>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="diets">
+            <h3 class="heading-tertiary">Works with any diet:</h3>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span></li>
               </li>
-              <li class="meal-attribute">
-                <ion-icon name="restaurant-outline"></ion-icon>
-                <span>NutriScore &reg; 74</span>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegan</span>
               </li>
-              <li class="meal-attribute">
-                <ion-icon name="star-outline"></ion-icon>
-                <span>4.9 rating (537)</span>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Pescatarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Gluten-free</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Lactose-free</span></li>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Keto</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Paleo</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Low FODMAP</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
+                ><span>Kid-friendly</span>
               </li>
             </ul>
           </div>
-          <div class="meal">Meals</div>
-          <div class="list">List of diets</div>
         </div>
+
+        <div class="container all-recipes">
+          <a href="#" class="link">See all recipes &rarr;</a>
+        </div>
+      </section>
+
+      <section class="section-testimonials grid grid--2-cols">
+        <div class="testimonials">
+          <figure class="testimonial">
+            <img class="testimonial-img" src="img/customers/dave.jpg" alt="Photo of Dave">
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having to order manually! It feels truly magical.</blockquote>
+              <p class="testimonial-name">&mdash;Dave Bryson</p>
+          </figure>
+
+          <figure class="testimonial">
+            <img class="testimonial-img" src="img/customers/ben.jpg" alt="Photo of Dave">
+            <blockquote class="testimonial-text">
+              The AI algorithm is crazy good, it chooses the right meals for me every time. It's amazing not to worry about food anymore! </blockquote>
+              <p class="testimonial-name">&mdash;Ben Hadley</p>
+          </figure>
+
+          <figure class="testimonial">
+            <img class="testimonial-img" src="img/customers/hannah.jpg" alt="Photo of Dave">
+            <blockquote class="testimonial-text">
+              I got Omnifood for the whole family, and it frees up so much time! Plus, everything is organic and vegan and without plastic.</blockquote>
+              <p class="testimonial-name">&mdash;Hannah Smith</p>
+          </figure>
+
+          <figure class="testimonial">
+            <img class="testimonial-img" src="img/customers/steve.jpg" alt="Photo of Dave">
+            <blockquote class="testimonial-text">
+              Omnifood is a life saver! I just started a company, so there's no time for cooking. I couldn't live without my daily meals now!</blockquote>
+              <p class="testimonial-name">&mdash;Steve Miller</p>
+          </figure>
+        </div>
+        <div class="gallery">gallery</div>
       </section>
     </main>
   </body>
