--- a/09-js-fundamentals/index.html
+++ b/09-js-fundamentals/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>JavaScript Fundamentals – Part 1</title>
   <style>
-    body {
+    /* body {
       height: 100vh;
       display: flex;
       align-items: center;
@@ -22,6 +22,11 @@
       padding: 30px;
       text-align: center;
       color: white;
+    } */
+
+    .container {
+      background-color: #fff;
+      width: 700px;
     }
   </style>
 </head>
@@ -29,9 +34,17 @@
 <body>
   <h1>JavaScript Fundamentals – Part 1</h1>
 
+  <div class="container">
+    <main class="group-name">
 
-  <script src="script.js"></script>
-  <script src="assignments.js"></script>
+    </main>
+  </div>
+
+
+
+  <!-- <script src="script.js"></script> -->
+  <script src="practice.js"></script>
+  <!-- <script src="assignments.js"></script> -->
 </body>
 
 </html>
