--- a/15-js-DOM-advanced/index.html
+++ b/15-js-DOM-advanced/index.html
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <title>Bankist | When Banking meets Minimalist</title>
+
+  <script defer src="script.js"></script>
+
 </head>
 
 <body>
@@ -185,6 +188,7 @@
     </div>
 
     <div class="slider">
+
       <div class="slide slide--1">
         <div class="testimonial">
           <h5 class="testimonial__header">Best financial decision ever!</h5>
@@ -245,10 +249,11 @@
         </div>
       </div>
 
+
       <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
-        <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
-        <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
-        <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
+      <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
+      <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
+      <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
       <button class="slider__btn slider__btn--left">&larr;</button>
       <button class="slider__btn slider__btn--right">&rarr;</button>
       <div class="dots"></div>
@@ -316,7 +321,7 @@
   </div>
   <div class="overlay hidden"></div>
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
