--- a/21-css-natours/index.html
+++ b/21-css-natours/index.html
@@ -31,7 +31,7 @@
 
     <main>
         <section class="section-about">
-            <div class="u-center-text u-margin-bottom-8">
+            <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     Exciting tours for adventurous people
                 </h2>
@@ -39,7 +39,20 @@
 
             <div class="row">
                 <div class="col-1-of-2">
-                    Text content
+                    <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Soluta quis odio voluptate provident
+                        modi exercitationem et quasi eveniet a fugit minus, excepturi, amet facere similique harum,
+                        ullam porro impedit numquam.
+                    </p>
+
+                    <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis dolores labore eligendi nam
+                        numquam minima molestias repudiandae ratione cupiditate quis, voluptatum.
+                    </p>
+
+                    <a href="#" class="btn-text">Learn more &rarr;</a>
                 </div>
                 <div class="col-1-of-2">
                     Image position
