feat: testimonial section stories added

--- a/21-css-natours/index.html
+++ b/21-css-natours/index.html
@@ -14,6 +14,12 @@
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
 
+<!-- FIXME: For live-server or compiler errors
+https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer
+
+https://marketplace.visualstudio.com/items?itemName=ritwickdey.live-sass
+-->
+
 <body>
     <header class="header">
         <div class="header__logo-box">
@@ -226,6 +232,9 @@
                 <div class="story">
                     <figure class="story__shape">
                         <img src="img/nat-8.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Mary Smith
+                        </figcaption>
                     </figure>
                     <div class="story__text">
                         <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
@@ -236,6 +245,28 @@
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/nat-9.jpg" alt="Person on a tour" class="story__img">
+                        <figcaption class="story__caption">
+                            Jack Wilson
+                        </figcaption>
+                    </figure>
+
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis nobis accusamus illo
+                            dolor temporibus enim vitae. At rem vel velit.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, culpa.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
             </div>
         </section>
     </main>
