--- a/21-css-natours/index.html
+++ b/21-css-natours/index.html
@@ -371,6 +371,26 @@ https://marketplace.visualstudio.com/items?itemName=ritwickdey.live-sass
         </div>
     </footer>
 
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before
+                    booking</h3>
+                <p class="popup__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis id laborum
+                    adipisci, dignissimos, recusandae velit consequuntur itaque odit hic quam soluta quaerat deleniti?
+                    Minus delectus, quo officia iste accusantium deleniti provident! Officia, natus commodi, repudiandae
+                    porro labore iste non eaque quidem quisquam harum recusandae voluptas dignissimos reiciendis veniam!
+                </p>
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+        </div>
+    </div>
+
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
